[package]
name = "jito-bytemuck"
description = "Jito bytemuck library"
version = "0.1.0"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/jito-bytemuck"
homepage = "https://jito.network/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[dependencies]
borsh = "0.10.3"
bytemuck = { version = "1.16.3", features = ["derive", "min_const_generics"] }
jito-account-traits-derive = { git = "https://github.com/jito-foundation/jito-account-traits-derive.git", version = "0.0.5" }
solana-program = "3.0.0"
